Mise à jour des status

--- a/association/index.html
+++ b/association/index.html
@@ -98,29 +98,14 @@ title: L'association
         </p>
         <ul>
             <li>
-                membre fondateur: personne ayant participé à la création de l’association et reconnue à ce titre au
-                sein et par vote en assemblée générale
+                membre fondateur: personne ayant participé à la création de l’association
             </li>
             <li>
-                membre d’honneur: personne ayant activement participé à la vie de l’association et reconnue à ce titre
-                au sein et par vote en assemblée générale, sur proposition du conseil d’administration
+                membre actif: personne participant activement à la vie de l’association
             </li>
             <li>
-                membre actif adhérent: personne participant activement à la vie de l’association, ayant adhéré à ce
-                titre pour l’année en cours, et à jour du paiement de son adhésion en date de l’assemblée générale
-            </li>
-            <li>
-                membre adhérent: personne physique ou morale ayant adhéré à ce titre pour l’année en cours, et à jour
-                du paiement de son adhésion en date de l’assemblée générale
-            </li>
-            <li>
-                membre bienfaiteur: personne cotisant pour soutenir les activités de l’association dans son ensemble ou
-                une action particulière de celle-ci
-            </li>
-            <li>
-                membre salarié (d’honneur, actif, ou adhérent): personne étant employé au sein de l’association
-                (intermittent ou permanent en CDD ou CDI) et ayant par ailleurs une activité militante au sein de la
-                structure
+                membre adhérent: personne physique ou morale ayant adhéré à ce titre pour l’année en cours, et à
+                jour du paiement de son adhésion en date de l’assemblée générale
             </li>
         </ul>
         <p>
@@ -129,13 +114,13 @@ title: L'association
             par le conseil d’administration.
         </p>
         <p>
-            Les adhésions et cotisations d’activités des membres actifs, adhérents et bienfaiteurs sont déterminés
+            Les adhésions et cotisations d’activités des membres adhérents sont déterminés
             annuellement en assemblée générale. Le cas échéant et en cas de besoin le bureau de l’association pourra les
             modifier en cours d’année sans que ces modifications puissent être rétroactives; le bureau devra dans ce cas
             justifier sa décision auprès de l’assemblée générale suivante.
         </p>
         <p>
-            Les membres fondateurs et d’honneurs sont exonérés d’adhésion à vie sauf en cas de radiations pour motif
+            Les membres fondateurs sont exonérés d’adhésion à vie sauf en cas de radiations pour motif
             grave.
         </p>
 
@@ -215,7 +200,7 @@ title: L'association
             demande du tiers de ses membres.
         </p>
         <p>
-            La présence de sept des membres du conseil d’administration est nécessaire pour la validité des
+            La présence de trois des membres du conseil d’administration est nécessaire pour la validité des
             délibérations. Les décisions sont prises par la majorité des voix; en cas de partage la voix du président
             est prépondérante.
         </p>
@@ -239,7 +224,7 @@ title: L'association
         <h2>Article IX – Assemblée générale</h2>
 
         <p>
-            L’assemblée générale de l’association comprend les membres actifs, fondateurs, et d’honneurs. La présence de
+            L’assemblée générale de l’association comprend les membres actifs, fondateurs, et adhérents. La présence de
             la moitié ds membres actifs est nécessaire pour la validité des délibérations. Elle se réunit une fois par
             an et chaque fois qu’elle est convoquée par le conseil d’administration ou sur la demande du quart au moins
             de ses membres.
@@ -294,7 +279,7 @@ title: L'association
         <h2>Article XIV</h2>
 
         <p>
-            Le président doit faire connaître dans les trois mois à la Préfecture du département tous les changements
+            Le président doit faire connaître dans les trois mois à la préfecture du département tous les changements
             survenus dans l’administration ou la direction de l’association ainsi que toutes es modifications apportées
             dans leurs statuts.
         </p>
