--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -5,8 +5,8 @@ title: Geek Camp 2014 - Evénements Okiwi
 <div class="row">
     <div class="col-lg-12">
         <div class="page-header">
-            <h1>Geek Camp 2015</h1>
-            <h2>18, 19 et 20 septembre à Ruffiac 47700</h2>
+            <h1>Geek Camp 2016</h1>
+            <h2>9, 10 et 11 septembre à Ruffiac 47700</h2>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
@@ -20,10 +20,12 @@ title: Geek Camp 2014 - Evénements Okiwi
                     <li>dormir à la belle étoile</li>
                 </ul>
                 <div class="well">
-                    <a href="https://okiwi.github.io/gcwe/#/">Inscriptions sont ouvertes</a>
+                    <a href="http://www.meetup.com/AgnosTech-Bordeaux/events/230739321/">Inscriptions sont ouvertes</a>
                 </div>
                 <div>
-                    <img src="/img/GeekCamp-Ruffiac-2014-web-medium.png" alt="Geek Camp flyer" />
+                    <a href="/img/Affiche-GeekCamp2016.png">
+                        <img src="/img/Affiche-GeekCamp2016-800x565.png" alt="Geek Camp flyer" border="0" />
+                    </a>
                 </div>
             </div>
         </div>
