MaJ index section geek camp

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ title: Okiwi
 
                 <p>
                     Le <a href="/geek-camp">Geek Camp</a> est une rencontre entre informaticiens. 
-                    Il aura lieu cette année le weekend du 18,19 et 20 séptembre.
+                    Il aura lieu cette année le weekend du 9, 10 et 11 séptembre.
                     Présentations, lightning talks,
-                    séances de code, discussions, vin, bières et barbecues étaient au programme de 
+                    séances de code, discussions, barbecues et convivialité étaient au programme de 
                     ces éditions mémorables&nbsp;!
                 </p>
 
