--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -20,7 +20,7 @@ title: Geek Camp 2014 - Evénements Okiwi
                     <li>dormir à la belle étoile</li>
                 </ul>
                 <div class="well">
-                    <a href="http://www.meetup.com/AgnosTech-Bordeaux/events/230739321/">Inscriptions sont ouvertes</a>
+                    <a href="http://www.meetup.com/AgnosTech-Bordeaux/events/230739321/">Les inscriptions sont ouvertes</a>
                 </div>
                 <div>
                     <a href="/img/Affiche-GeekCamp2016.png">
