--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ layout: default
         </p>
 
         <p class="lead">
-            <a href="{{ "/adherer/" | prepend: site.baseurl }}" class="btn btn-outline-primary">
+            <a href="{{ "/adherer/" | prepend: site.url }}" class="btn btn-outline-primary">
                 Cotisez pour soutenir l'association
             </a>
         </p>
