MaJ pour Geek Camp 2017

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -20,11 +20,11 @@ title: Geek Camp 2016 - Evénements Okiwi
                     <li>dormir à la belle étoile</li>
                 </ul>
                 <div class="well">
-                    <a href="http://www.meetup.com/AgnosTech-Bordeaux/events/230739321/">Les inscriptions sont ouvertes</a>
+                    <a href="https://www.meetup.com/software-craftsmanship-bdx/events/238953527/">Les inscriptions sont ouvertes</a>
                 </div>
                 <div>
-                    <a href="/img/Affiche-GeekCamp2016.png">
-                        <img src="/img/Affiche-GeekCamp2016-800x565.png" alt="Geek Camp flyer" border="0" />
+                    <a href="/img/Affiche-GeekCamp2017.png">
+                        <img src="/img/Affiche-GeekCamp2017-800x565.png" alt="Geek Camp flyer" border="0" />
                     </a>
                 </div>
             </div>
