--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -5,8 +5,8 @@ title: Geek Camp 2016 - Evénements Okiwi
 <div class="row">
     <div class="col-lg-12">
         <div class="page-header">
-            <h1>Geek Camp 2016</h1>
-            <h2>9, 10 et 11 septembre à Ruffiac 47700</h2>
+            <h1>Geek Camp 2017</h1>
+            <h2>8, 9 et 10 septembre à Ruffiac 47700</h2>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
@@ -24,7 +24,7 @@ title: Geek Camp 2016 - Evénements Okiwi
                 </div>
                 <div>
                     <a href="/img/Affiche-GeekCamp2017.png">
-                        <img src="/img/Affiche-GeekCamp2017-800x565.png" alt="Geek Camp flyer" border="0" />
+                        <img src="/img/Affiche-GeekCamp2017-800x565.png" alt="Geek Camp flyer à imprimer" border="0" />
                     </a>
                 </div>
             </div>
