--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ layout: default
             Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeurs améliorent
             leurs compétences en programmation. Le principe est simple&nbsp, on prend un exercice de programmation,
             on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
-            simple de Kent Beck:
+            simple de Kent Beck&nbsp;:
         </p>
 
 
