Update meetup url

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ layout: default
         </ul>
 
          <p class="lead">
-            <a href="http://www.meetup.com/AgnosTech-Bordeaux/" class="btn btn-outline-primary">
+            <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" class="btn btn-outline-primary">
                 Voir les prochains codings dojos
             </a>
         </p>
