Update event descriptions

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ layout: default
                 <h4>Coding Dojos</h4>
                 <p>
                     Les coding dojos sont des sessions amusantes et intenses pendant lesquelles des développeurs
-                    améliorent leurs compétences en programmation. Okiwi organise 2 coding dojos par mois.
+                    améliorent leurs compétences en programmation. Okiwi organise un coding dojos chaque premier lundi du mois.
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 m-b-3">
@@ -168,13 +168,13 @@ layout: default
                 <p>
                     <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est un d’événement
                     à but non lucratif, qui vise principalement à promouvoir massivement l'Agilité. Okiwi organise
-                    depuis maintenant 6 ans l'Agile Tour Bordeaux.
+                    depuis 2009 l'Agile Tour Bordeaux.
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 m-b-3">
                 <h4>Geek Camp</h4>
                 <p>
-                    Le Geek Camp est une rencontre entre informaticiens qui se déroule sur un week end en septembre.
+                    Le Geek Camp est une rencontre entre aficionados de l'informatique qui se déroule sur un week-end en septembre.
                     Présentations, lightning talks,
                     séances de code, discussions, vin, bières et barbecues étaient au programme des éditions précédentes&nbsp;!
                 </p>
