--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -24,7 +24,7 @@ title: Geek Camp 2017 - Evénements Okiwi
                 </div>
                 <div>
                     <a href="/img/Affiche-GeekCamp2017.png">
-                        <img src="/img/Affiche-GeekCamp2017-800x566.png" alt="Geek Camp flyer à imprimer" border="0" />
+                        <img src="/img/Affiche-GeekCamp2018-800x566.jpg" alt="Geek Camp flyer à imprimer" border="0" />
                     </a>
                 </div>
             </div>
