Presentation des objectifs du slack

--- a/slack/index.html
+++ b/slack/index.html
@@ -6,7 +6,26 @@ layout: nofooter
     <div class="row">
         <div class="col-xs-12 p-y-3">
             <h1>Slack</h1>
-
+            <p>
+				Vous voici aux portes du Slack d'Okiwi, <b>pour continuer online les partages et échanges bienveillants qui font l'ADN de l'association.</b>
+            </p><p>
+            	Initialement dédié aux échanges Bordelais, il rayonne désormais <b>dans tout l'hexagone</b> avec même quelques membres disséminés aux quatre coins du monde.
+            </p><p>
+                    Qui que vous soyez, pas de <i>"chichi"</i> entre nous, <b>tout le monde a le droit à la parole et au respect</b> tant que ça reste bienveillant, sincère et constructif.<br/>
+                </p><p>
+                    <b>Il n'y a pas de question <i>"idiote"</i></b> et bien au contraire beaucoup de questions qui pourraient être considérées comme <i>"basiques"</i> se révèlent être de très bon supports pour des discussions très intéressantes. 
+                    Enfin tant que la réponse ne s'obtient pas en tapant la recherche dans son moteur de recherche préféré et en cliquant sur le premier lien...
+                </p><p>
+                    <b>Entre autre vous y trouverez :</b>
+                    <ul>
+                        <li>De la bonne humeur, de la bienveillance, et parfois quelques trolls pas méchants</li>
+                        <li>De l'entraide, on n'est jamais seul face à des difficultés</li>
+                        <li>Des échanges riches et parfois contradictoires mais qui permettent d'approfondir un sujet</li>
+                        <li>De la veille partagée</li>
+                        <li>Des conseils/tutorats, d'expérimentés envers des moins aguerris, pour les aider à monter en compétence</li>
+                        <li>Des rendez-vous IRL locaux, régionaux et nationaux (apéros, conférence, meetups, ...)</li>
+                    </ul>
+                </p>
             <p>
                 <a href="https://okiwi-fr.slack.com" class="btn btn-primary btn-lg btn-block">
                     Connexion <span class="hidden-sm-down">sur okiwi-fr.slack.com</span>
