ajoute lien vers CoC

--- a/slack/index.html
+++ b/slack/index.html
@@ -15,6 +15,7 @@ layout: nofooter
                     Inscription
                 </a>
             </p>
+            <p><a href="CoC.html">Code de conduite</a></p>
         </div>
     </div>
 </div>
