rafinage du texte CoC

--- a/slack/CoC.html
+++ b/slack/CoC.html
@@ -100,28 +100,30 @@ connotation sexuelle. L'équipe du stand (y compris les volontaires) ne doivent
 pas utiliser de vêtements, uniformes ou costumes à connotation sexuelle. Ils ne
 doivent pas non plus créer un environnement sexualisé.</p>
 
-<p>Si un participant a un comportement de harcèlement, les organisateurs de la
-conférence peuvent prendre toute action qui leur semble adéquate. Cela va d'un
-simple avertissement à l'exclusion du participant de la conférence sans
-remboursement.</p>
+<p>Si un participant a un comportement de harcèlement, les membres de la
+communauté peuvent prendre toute action qui leur semble adéquate. Cela va d'un
+simple avertissement à l'exclusion du participant de la communauté.</p>
 
 <p>Si vous vous sentez harcelé, si vous pensez que quelqu'un se fait harceler,
-et plus généralement en cas de problème, merci de contacter immédiatement un membre
-de l'organisation de l'événement. Les membres sont facilement identifiables à leur
-t-shirts aux couleurs de l'événement.</p>
+et plus généralement en cas de problème, merci de contacter immédiatement un <a href="https://okiwi-fr.slack.com/account/workspace-settings#admins">administrateur</a> ou organisateur.</p>
 
 <p>Les membres de l'organisation seront ravis d'aider les participants à
-contacter la sécurité de l'hôtel ou du bâtiment où se déroule l'événement, ou
+contacter la sécurité du bâtiment où se déroule l'événement, ou
 les forces de l'ordre, à fournir une escorte ainsi qu'à aider de toute autre
 façon les personnes victimes de harcèlement, pour garantir leur sécurité pendant
-la durée de l'événement. Nous apprécions votre participation à l'événement.</p>
+la durée de l'activité. Nous apprécions votre participation à l'activité.</p>
 
 <p>Nous attendons des participants qu'ils suivent ces règles dans le bâtiment
-des conférences et des ateliers, ainsi que pendant les événements sociaux
-relatifs à la conférence.</p>
+des activités et des ateliers, ainsi que pendant les événements sociaux
+relatifs à l'activité de l'association.</p>
 
 <div class="footer">
 <p><small><em>Version originale et crédit: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a> &amp; <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a><br>
+
+Pour aider à la traduction et à l'amélioration du texte d'origine : <a href="https://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a><br>
+
+Le texte d'origine est sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a></em></small>
+
 
 Merci d'aider à la traduction et à l'amélioration de ce texte forké : <a href="https://github.com/okiwi/confcodeofconduct.com">https://github.com/okiwi/confcodeofconduct.com</a><br>
 
