correction de mise-en-page

--- a/slack/CoC.html
+++ b/slack/CoC.html
@@ -122,12 +122,10 @@ relatifs à l'activité de l'association.</p>
 
 Pour aider à la traduction et à l'amélioration du texte d'origine : <a href="https://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a><br>
 
-Le texte d'origine est sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a></em></small>
-
+Le texte d'origine est sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a><br>
 
 Merci d'aider à la traduction et à l'amélioration de ce texte forké : <a href="https://github.com/okiwi/confcodeofconduct.com">https://github.com/okiwi/confcodeofconduct.com</a><br>
 
 Ce texte est sous licence <a rel="license" href="http://www.wtfpl.net/txt/copying/">WTFPL</a></em></small>
-
 </p>
 </div>
