deplacement de CoC vers la racine, integration dans le footer global, replacement de TTF par le Slack Okiwi

--- a/CoC.html
+++ b/CoC.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf8">
-<title>Code de conduite pour la communauté (slack, rencontres, evenements)</title>
-<link rel="icon" type="image/x-icon" href="//confcodeofconduct.com/favicon.ico" />
+---
+layout: nofooter
+title: Code de conduite pour la communauté Okiwi (slack, rencontres, evenements)
+---
+
 <style>
 * { 
   font-family: 'helvetica neue', arial, helvetica;
   font-weight: 200;
 }
 
-body { 
-  background: white;
-  color: #212121;
-  margin: 0;
-  margin-top: 80px;
-} 
 
 p, h1, h2 {
   max-width: 80%;
@@ -54,8 +47,7 @@ em {
   max-width: 100%;
 }
 </style>
-</head>
-<body>
+
 <h1>Code de conduite pour la communauté (slack, rencontres, evenements)</h1>
 
 <p>Tous les participants pour nos
@@ -118,11 +110,9 @@ des activités et des ateliers, ainsi que pendant les événements sociaux
 relatifs à l'activité de l'association.</p>
 
 <div class="footer">
-<p><small><em>Version originale et crédit: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a> &amp; <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a><br>
+<p><small><em>
 
-Pour aider à la traduction et à l'amélioration du texte d'origine : <a href="https://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a><br>
-
-Le texte d'origine est sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a><br>
+Le <a href="https://github.com/leftlogic/confcodeofconduct.com">texte d'origine</a> est sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a><br>
 
 Merci d'aider à la traduction et à l'amélioration de ce texte forké : <a href="https://github.com/okiwi/confcodeofconduct.com">https://github.com/okiwi/confcodeofconduct.com</a><br>
 
