--- a/index.html
+++ b/index.html
@@ -180,12 +180,9 @@ layout: default
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 m-b-3">
-                <h4>TTFX</h4>
-                <p>Les TTFX sont des manifestions digitales prenant la forme de conférences, ateliers, ou hackathon.
-                    Elles sont pilotées par la communauté qui est libre de choisir les sujets abordés.
-                    Les conférences ont lieux tout les 3 mois, les ateliers sur demande, et
-                    <a href="http://www.codeofwar.net">code of war</a> tous les ans.
-                    <a href="http://www.ttfx.fr">Participez !</a></p>
+                <h4>Le Slack Okiwi</h4>
+                <p>Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de plein de sujets qui touchent l'informatique. 
+                C'est notre lieu de rencontre et d'echange virtuel où l'on peut discuter technique, organisationel ou même philosophe.</p>
             </div>
         </div>
     </div>
