MaJ pour Geek Camp 2019

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ layout: default
             <div class="col-lg-3 col-md-6 m-b-3">
                 <h4>Geek Camp</h4>
                 <p>
-                    Le Geek Camp est une rencontre entre aficionados de l'informatique qui se déroule sur un week-end en septembre.
+                    Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur un week-end en septembre.
                     Présentations, lightning talks,
                     séances de code, discussions, vin, bières et barbecues étaient au programme des éditions précédentes&nbsp;!
                 </p>
