--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -2,30 +2,32 @@
 layout: default
 title: Geek Camp 2018 - Evénements Okiwi
 ---
-<div class="row">
-    <div class="col-lg-12">
-        <div class="page-header">
-            <h1>Geek Camp 2018</h1>
-            <h2>14, 15 et 16 septembre à Ruffiac 47700</h2>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
-                <ul>Au programme:
-                    <li>il n'y a pas de programme prédéfini</li>
-                    <li>environnement collaboratif</li>
-                    <li>partage de connaissances</li>
-                    <li>du code, de la technique, du fun</li>
-                    <li>grillades et sorties campagnardes</li>
-                    <li>dormir à la belle étoile</li>
-                </ul>
-                <div class="well">
-                    <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/events/252589669/">Les inscriptions sont ouvertes</a>
-                </div>
-                <div>
-                    <a href="/img/Affiche-GeekCamp2017.png">
-                        <img src="/img/Affiche-GeekCamp2018-800x566.jpg" alt="Geek Camp flyer à imprimer" border="0" />
-                    </a>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1>Geek Camp 2019</h1>
+                <h2>14, 15 et 16 juin à Ruffiac 47700</h2>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
+                    <ul>Au programme:
+                        <li>il n'y a pas de programme prédéfini</li>
+                        <li>environnement collaboratif</li>
+                        <li>partage de connaissances</li>
+                        <li>du code, de la technique, du fun</li>
+                        <li>grillades et sorties campagnardes</li>
+                        <li>dormir à la belle étoile</li>
+                    </ul>
+                    <div class="well">
+                        <a href="https://www.meetup.com/software-craftsmanship-bdx/events/257215113/">Les inscriptions sont ouvertes</a>
+                    </div>
+                    <div>
+                        <a href="/img/Affiche-GeekCamp2019.png">
+                            <img src="/img/Affiche-GeekCamp2019-800x566.png" alt="Geek Camp flyer à imprimer" border="0" />
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
