--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ layout: default
         <h1>Okiwi</h1>
         <p class="lead">Catalyseur d'évènements informatiques sur Bordeaux</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="http://www.meetup.com/AgnosTech-Bordeaux/">
+            <a class="btn btn-primary btn-lg" href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/">
                 Voir les évènements
             </a>
         </p>
