--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ layout: default
             <div class="col-lg-3 col-md-6 m-b-3">
                 <h4>Le Slack Okiwi</h4>
                 <p>Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de plein de sujets qui touchent l'informatique. 
-                C'est notre lieu de rencontre et d'echange virtuel où l'on peut discuter technique, organisationel ou même philosophe.</p>
+                C'est notre lieu de rencontre et d'echange virtuel où l'on peut discuter technique, organisationel ou même philosophie.</p>
             </div>
         </div>
     </div>
