Centrer le texte sur la page merci

--- a/merci.html
+++ b/merci.html
@@ -3,15 +3,18 @@ layout: default
 title: Merci
 ---
 
+<div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1>Merci!</h1>
 
-<div class="row">
-    <div class="col-lg-12 text-center">
-        <div class="jumbotron">
-            <h1>Merci!</h1>
+        <p>L'ensemble des membres de l'association Okiwi vous remercie!</p>
 
-            <p>L'ensemble des membres de l'association Okiwi vous remercie!</p>
-
-            <p><a class="btn btn-primary btn-lg" href="/">retourner à l'accueil</a></p>
-        </div>
+        <p>
+          <a class="btn btn-primary btn-lg" href="/">retourner à l'accueil</a>
+        </p>
+      </div>
     </div>
+  </div>
 </div>
