--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Geek Camp 2019 - Evénements Okiwi
+title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
 ---
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>Geek Camp 2019</h1>
-                <h2>14, 15 et 16 juin à Ruffiac 47700</h2>
+                <h1>Geek Camp 2019.2</h1>
+                <h2>27, 28 et 29 septembre à Ruffiac 47700</h2>
             </div>
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -33,8 +33,8 @@ title: Geek Camp 2019 - Evénements Okiwi
 
 
                     <div>
-                        <a href="/img/Affiche-GeekCamp2019.png">
-                            <img src="/img/Affiche-GeekCamp2019-800x566.png" alt="Geek Camp flyer à imprimer" border="0" />
+                        <a href="/img/Affiche-GeekCamp2019.2.jgp">
+                            <img src="/img/Affiche-GeekCamp2019.2.jpg" alt="Geek Camp flyer à imprimer" border="0" />
                         </a>
                     </div>
                 </div>
