ajoute titre plus long que .2

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -6,7 +6,7 @@ title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>Geek Camp 2019.2</h1>
+                <h1>Geek Camp 2019 version été indien, le rétour</h1>
                 <h2>27, 28 et 29 septembre à Ruffiac 47700</h2>
             </div>
             <div class="panel panel-default">
