ajoute lien vers les inscriptions

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -30,6 +30,9 @@ title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
                         <li>grillades et sorties campagnardes</li>
                         <li>dormir à la belle étoile</li>
                     </ul>
+		    <div class="well">
+			<a href="https://www.meetup.com/software-craftsmanship-bdx/events/263504171/">Les inscriptions sont ouvertes</a>
+		    </div>
 
 
                     <div>
