deplacé lien vers l'article Sud-Ouest plus bas

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -12,16 +12,6 @@ title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
             <div class="panel panel-default">
                 <div class="panel-body">
                     <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
-
-                    <div style="margin-top: 20px; display: flex; align-items: center;">
-                        <div>Lisez l'article paru dans Sud-Ouest à propos de l'édition 2019 !</div>
-                        <div style="margin-left: 30px">
-                            <a href="Sud-Ouest-article-GeekCamp2019.pdf" target="_blank">
-                            <img src="Sud-Ouest-article-GeekCamp2019-vignette.png" width="200" alt="Vignette de l'article Sud-Ouest" />
-                            </a>
-                        </div>
-                    </div>
-
                     <ul>Au programme:
                         <li>il n'y a pas de programme prédéfini</li>
                         <li>environnement collaboratif</li>
@@ -33,12 +23,18 @@ title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
 		    <div class="well">
 			<a href="https://www.meetup.com/software-craftsmanship-bdx/events/263504171/">Les inscriptions sont ouvertes</a>
 		    </div>
-
-
                     <div>
                         <a href="/img/Affiche-GeekCamp2019.2.jgp">
                             <img src="/img/Affiche-GeekCamp2019.2.jpg" alt="Geek Camp flyer à imprimer" border="0" />
                         </a>
+                    </div>
+		    <div style="margin-top: 20px; display: flex; align-items: center;">
+                        <div>Lisez l'article paru dans Sud-Ouest à propos de l'édition 2019 de juin !</div>
+                        <div style="margin-left: 30px">
+                            <a href="Sud-Ouest-article-GeekCamp2019.pdf" target="_blank">
+                            <img src="Sud-Ouest-article-GeekCamp2019-vignette.png" width="200" alt="Vignette de l'article Sud-Ouest" />
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
