Ajout de notice de ne pas utiliser @channel et @here sur #general

--- a/CoC.html
+++ b/CoC.html
@@ -109,6 +109,8 @@ la durée de l'activité. Nous apprécions votre participation à l'activité.</
 des activités et des ateliers, ainsi que pendant les événements sociaux
 relatifs à l'activité de l'association.</p>
 
+<p><b>A noter aussi</b>, sur le Slack d'Okiwi, on n'utilise pas @channel ni @here dans des chans avec beaucoup de monde, comme #general par exemple.</p>
+
 <div class="footer">
 <p><small><em>
 
