Ajout d'informations à la page `merci.hmtl`
Signed-off-by: Pamplemousse <xav.maso@gmail.com>

--- a/merci.html
+++ b/merci.html
@@ -7,10 +7,28 @@ title: Merci
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1>Merci!</h1>
+        <h1>Merci !</h1>
 
-        <p>L'ensemble des membres de l'association Okiwi vous remercie!</p>
+        <p>Nous avons bien reçu votre paiment.</p>
 
+        <p>L'ensemble des membres de l'association Okiwi vous remercie de votre cotisation !</p>
+
+        <p>N'hésitez pas à prendre part à la vie de notre communauté :
+          <ul>
+            <li>
+              En participant <a target="_blank" href="http://www.meetup.com/fr-FR/software-craftsmanship-bdx/">aux évènements</a>;
+            </li>
+            <li>
+              En contribuant à la vie du <a href="{{ "/slack/" | prepend: site.url }}">Slack</a>;
+            </li>
+            <li>
+              En venant discuter sur <a target="_blank" href="https://discord.com/invite/GkYYFYYk">Discord</a>;
+            </li>
+            <li>
+              En nous suivant sur <a target="_blank" href="https://twitter.com/okiwi_fr">Twitter</a>.
+            </li>
+          </ul>
+        </p>
         <p>
           <a class="btn btn-primary btn-lg" href="/">retourner à l'accueil</a>
         </p>
