--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ layout: default
     <div class="container">
         <h2 class="bd-featurette-title">Qu'est ce qu'Okiwi&nbsp;?</h2>
         <p class="lead">
-            Okiwi est une communauté ouverte de praticiens en informatique située à Bordeaux. Ouverte parce
+            Okiwi est une communauté ouverte de praticiennes et praticiens en informatique, originaire de Bordeaux. Ouverte parce
             que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun
             y apportera.
             <br>
@@ -159,14 +159,14 @@ layout: default
             <div class="col-lg-3 col-md-6 m-b-3">
                 <h4>Coding Dojos</h4>
                 <p>
-                    Les coding dojos sont des sessions amusantes et intenses pendant lesquelles des développeurs
-                    améliorent leurs compétences en programmation. Okiwi organise un coding dojos chaque premier lundi du mois.
+                    Les coding dojos sont des sessions amusantes et intenses pendant lesquelles des développeuses et développeurs
+                    améliorent leurs compétences en programmation. Okiwi organise un coding dojo chaque premier lundi du mois.
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 m-b-3">
                 <h4>Agile Tour Bordeaux</h4>
                 <p>
-                    <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est un d’événement
+                    <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est un événement
                     à but non lucratif, qui vise principalement à promouvoir massivement l'Agilité. Okiwi organise
                     depuis 2009 l'Agile Tour Bordeaux.
                 </p>
@@ -181,8 +181,17 @@ layout: default
             </div>
             <div class="col-lg-3 col-md-6 m-b-3">
                 <h4>Le Slack Okiwi</h4>
-                <p>Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de plein de sujets qui touchent l'informatique. 
-                C'est notre lieu de rencontre et d'echange virtuel où l'on peut discuter technique, organisationel ou même philosophie.</p>
+                <p>
+                    Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de plein de sujets qui touchent l'informatique. 
+                    C'est notre lieu de rencontre et d'échange virtuel où l'on peut discuter technique, organisationnel et même philosophie.
+                </p>
+            </div>
+            <div class="col-lg-3 col-md-6 m-b-3">
+                <h4>Le Discord Okiwi</h4>
+                <p>
+                    Nous utilisons <a href="https://discord.com/invite/BQa48a2">Discord</a> afin d'organiser des sessions d'échange et des codings dojo
+                    en visioconférence.
+                </p>
             </div>
         </div>
     </div>
@@ -192,7 +201,8 @@ layout: default
     <div class="container">
         <h2 class="bd-featurette-title">Soutenir Okiwi</h2>
         <p class="lead">
-            Okiwi existe depuis 10 ans. La communauté décide de contribuer bénévolement au développement de
+            Okiwi est une <a href="/status">association loi 1901 qui existe depuis 2006</a>. 
+            La communauté décide de contribuer bénévolement au développement de
             l'association. De ce fait, l'ensemble des activités de l'association sont gratuites. Néanmoins il est
             possible de soutenir l'association et d'adhérer pour devenir membre cotisant.
         </p>
@@ -209,8 +219,8 @@ layout: default
     <div class="container">
         <h2 class="bd-featurette-title">Coding Dojo&nbsp;?</h2>
         <p class="lead">
-            Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeurs améliorent
-            leurs compétences en programmation. Le principe est simple&nbsp, on prend un exercice de programmation,
+            Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeuses et développeurs améliorent
+            leurs compétences en programmation et en communication. Le principe est simple&nbsp, on prend un exercice de programmation,
             on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
             simple de Kent Beck&nbsp;:
         </p>
