--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@ layout: default
             que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun
             y apportera.
             <br>
-            Nous organisons entre autre :
+            Nous organisons entre autres :
         </p>
 
         <div class="row">
-            <div class="col-lg-3 col-md-6 m-b-3">
+            <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Coding Dojos</h4>
                 <p>
                     Les coding dojos sont des sessions amusantes et intenses pendant lesquelles des développeuses et développeurs
                     améliorent leurs compétences en programmation. Okiwi organise un coding dojo chaque premier lundi du mois.
                 </p>
             </div>
-            <div class="col-lg-3 col-md-6 m-b-3">
+            <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Agile Tour Bordeaux</h4>
                 <p>
                     <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est un événement
@@ -171,7 +171,7 @@ layout: default
                     depuis 2009 l'Agile Tour Bordeaux.
                 </p>
             </div>
-            <div class="col-lg-3 col-md-6 m-b-3">
+            <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Geek Camp</h4>
                 <p>
                     Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur un week-end en été.
@@ -179,14 +179,16 @@ layout: default
                     séances de code, discussions, vin, bières et barbecues étaient au programme des éditions précédentes&nbsp;!
                 </p>
             </div>
-            <div class="col-lg-3 col-md-6 m-b-3">
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Le Slack Okiwi</h4>
                 <p>
                     Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de plein de sujets qui touchent l'informatique. 
                     C'est notre lieu de rencontre et d'échange virtuel où l'on peut discuter technique, organisationnel et même philosophie.
                 </p>
             </div>
-            <div class="col-lg-3 col-md-6 m-b-3">
+            <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Le Discord Okiwi</h4>
                 <p>
                     Nous utilisons <a href="https://discord.com/invite/BQa48a2">Discord</a> afin d'organiser des sessions d'échange et des codings dojo
