--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@ layout: default
             <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Coding Dojos</h4>
                 <p>
-                    Les coding dojos sont des sessions amusantes et intenses pendant lesquelles des développeuses et développeurs
+                    Les <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/">coding dojos</a> sont des sessions amusantes et intenses 
+                    pendant lesquelles des développeuses et développeurs de tous niveaux
                     améliorent leurs compétences en programmation. Okiwi organise un coding dojo chaque premier lundi du mois.
                 </p>
             </div>
