--- a/status/index.html
+++ b/status/index.html
@@ -5,6 +5,14 @@ layout: default
 <div class="container status">
     <div class="row">
         <div class="col-xs-12 p-y-3">
+            <h1>Les membres du bureau</h1>
+            <ul>
+                <li><strong>Président</strong> : Sam Cranford</li>
+                <li><strong>Vice-président</strong> : Fabien Lamarque</li>
+                <li><strong>Secrétaire</strong> : Christophe Cadilhac</li>
+                <li><strong>Trésorière</strong> : Stéfanie Loiseleur</li>
+            </ul>
+            
             <h1>Les statuts de l'association</h1>
 
             <h2>Article I – Dénomination, durée et sièges</h2>
