--- a/CoC.html
+++ b/CoC.html
@@ -64,13 +64,14 @@ sain pour tous.</p>
 
 <h2>La version rapide</h2>
 
-<p>Nos événements se veulent des expériences sans harcèlement, quel que soit
-votre sexe, votre identité sexuelle, votre âge, votre orientation sexuelle,
-votre handicap, votre apparence physique, votre poids, votre race ou votre
-religion. Nous ne tolérons aucun harcèlement des participants à nos événements,
-quel que soit sa forme. Les expressions et les images à connotation sexuelle ne
-sont pas appropriées lors de l'événement. Ceci inclut les conférences, les
-ateliers, les soirées, Twitter et les autres médias en ligne. Les participants qui violent ces règles peuvent être sanctionnés, voire exclus
+<p>Nos événements se veulent des expériences sans harcèlement ni discrimination, quel que soit votre sexe, 
+votre identité sexuelle, votre orientation sexuelle, votre âge, votre handicap, votre apparence physique, 
+votre race, votre ethnie, votre religion (ou absence de religion), votre niveau d'études ou votre niveau d'expérience.
+Nous ne tolérons aucun harcèlement des participants à nos événements,
+quelle qu'en soit la forme. Les expressions et les images à connotation sexuelle ne
+sont pas appropriées lors de nos événements. Ceci inclut les conférences, les
+ateliers, les soirées, Twitter, Slack, Discord et les autres médias en ligne. 
+Les participants qui violent ces règles peuvent être sanctionnés, voire exclus
 de l'activité et/ou la communauté à la discrétion de la communauté</p>
 
 <h2>La version moins rapide</h2>
@@ -97,7 +98,9 @@ communauté peuvent prendre toute action qui leur semble adéquate. Cela va d'un
 simple avertissement à l'exclusion du participant de la communauté.</p>
 
 <p>Si vous vous sentez harcelé, si vous pensez que quelqu'un se fait harceler,
-et plus généralement en cas de problème, merci de contacter immédiatement un <a href="https://okiwi-fr.slack.com/account/workspace-settings#admins">administrateur</a> ou organisateur.</p>
+et plus généralement en cas de problème, merci de contacter immédiatement 
+un <a href="https://okiwi-fr.slack.com/account/workspace-settings#admins">administrateur</a> 
+ou organisateur.</p>
 
 <p>Les membres de l'organisation seront ravis d'aider les participants à
 contacter la sécurité du bâtiment où se déroule l'événement, ou
