Ajout de précision sur les frais fixes

--- a/adherer/index.html
+++ b/adherer/index.html
@@ -49,7 +49,9 @@ layout: nofooter
                 <li>l'assurance responsabilité civile qui nous permet d'organiser autant d'évènements que nous
                     souhaitons
                 </li>
-                <li>le nom de domaine <a href="http://okiwi.org/">okiwi.org</a> et <a
+                <li>les frais de tenue de compte bancaire
+                </li>
+                <li>les noms de domaine <a href="http://okiwi.org/">okiwi.org</a> et <a
                         href="http://agiletourbordeaux.fr/">agiletourbordeaux.fr</a></li>
                 <li>le serveur mail</li>
             </ul>
