Compléter les raisons d'adhérer
Reprise du super message de Stéfanie https://okiwi-fr.slack.com/archives/C03VA46PW/p1647264752055079

--- a/adherer/index.html
+++ b/adherer/index.html
@@ -47,15 +47,25 @@ layout: nofooter
                 comme:</p>
             <ul>
                 <li>l'assurance responsabilité civile qui nous permet d'organiser autant d'évènements que nous
-                    souhaitons
+                    souhaitons (Geek camp, coding dojos, Newcrafts Bordeaux...)
                 </li>
-                <li>les frais de tenue de compte bancaire
-                </li>
+                <li>les frais de tenue de compte bancaire</li>
                 <li>les noms de domaine <a href="http://okiwi.org/">okiwi.org</a> et <a
                         href="http://agiletourbordeaux.fr/">agiletourbordeaux.fr</a></li>
                 <li>le serveur mail</li>
             </ul>
-            <p>Ils permettent aussi à Okiwi de rendre les évènements gratuits ! </p>
+            <p>
+                Ils permettent aussi à Okiwi de rendre les petits évènements gratuits et de fournir une avance de trésorerie pour 
+                des évènements plus importants comme l’Agile Tour Bordeaux (qui est gratuit pour nous tous grâce aux généreux dons d’entreprises sponsor).
+            </p>
+            
+            <p>
+                Être membre cotisant, c’est également pouvoir participer à l’Assemblée Générale de l’association et donc y apporter vos 
+                contributions et donner votre avis sur l’utilisation que l’association fait de cet argent. <br/>
+                Et c’est aussi pouvoir apporter votre candidature pour le bureau si cela vous intéresse.
+            </p>
+            
+            <p>Pour finir, nous avons choisi une adhésion annuelle de 10€. </p>
 
         </div>
     </div>
