--- a/adherer/index.html
+++ b/adherer/index.html
@@ -13,6 +13,8 @@ layout: nofooter
     <div class="row">
         <div class="col-sm-5">
             <h2>Devenir membre cotisant</h2>
+            
+            <iframe id="haWidget" allowtransparency="true" scrolling="auto" src="https://www.helloasso.com/associations/association-okiwi/adhesions/adhesion-okiwi-2022/widget" style="width: 100%; height: 750px; border: none;" onload="window.scroll(0, this.offsetTop)"></iframe>
 
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick">
