--- a/adherer/index.html
+++ b/adherer/index.html
@@ -14,8 +14,7 @@ layout: nofooter
         <div class="col-sm-5">
             <h2>Devenir membre cotisant</h2>
             
-            <iframe id="haWidget" allowtransparency="true" scrolling="auto" src="https://www.helloasso.com/associations/association-okiwi/adhesions/adhesion-okiwi-2022/widget" style="width: 100%; height: 750px; border: none;" onload="window.scroll(0, this.offsetTop)"></iframe>
-
+<iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/association-okiwi/adhesions/adhesion-okiwi-2022/widget-vignette" style="width: 350px; height: 450px; border: none;"></iframe>
             <br/>
 
             <p>ou par courrier à:</p>
