--- a/adherer/index.html
+++ b/adherer/index.html
@@ -14,8 +14,7 @@ layout: nofooter
         <div class="col-sm-5">
             <h2>Devenir membre cotisant</h2>
             
-<iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/association-okiwi/adhesions/adhesion-okiwi-2022/widget-vignette" style="width: 350px; height: 450px; border: none;"></iframe>
-            <br/>
+            <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/association-okiwi/adhesions/adhesion-okiwi-2022/widget-vignette" style="width: 350px; height: 450px; border: none;"></iframe>
 
             <p>ou par courrier à:</p>
             <address>
@@ -58,34 +57,8 @@ layout: nofooter
         <div class="col-lg-6 p-t-3">
             <h2>Faire un don</h2>
 
-            <div class="row">
-                <div class="col-xs-2">
-                    <div class="form-group">
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="TPYAFNHNYEMWA">
-                            <input style="width: 37px; height: 23px; " type="image"
-                                   src="https://www.paypal.com//fr_FR/i/logo/PayPal_mark_37x23.gif" border="0"
-                                   name="submit"
-                                   alt="PayPal - la solution de paiement en ligne la plus simple et la plus sécurisée !">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1"
-                                 height="1">
-                        </form>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <script id='fbfjdya'>(function (i) {
-                        var f, s = document.getElementById(i);
-                        f = document.createElement('iframe');
-                        f.src = '//api.flattr.com/button/view/?uid=okiwi&button=compact&url=' + encodeURIComponent(document.URL);
-                        f.title = 'Flattr';
-                        f.height = 20;
-                        f.width = 110;
-                        f.style.borderWidth = 0;
-                        s.parentNode.insertBefore(f, s);
-                    })('fbfjdya');</script>
-                </div>
-            </div>
+            <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/association-okiwi/formulaires/3/widget-bouton" style="width:100%;height:70px;border:none;"></iframe><div style="width:100%;text-align:center;">Propulsé par <a href="https://www.helloasso.com" rel="nofollow">HelloAsso</a></div>
+                
         </div>
     </div>
 </div>
